Access entries in processNewEntries() only once
Rather than accessing AppendEntries.getEntries() in three places,
perform only a single access and retain the value in a local variable.

Also access the last entry only when absolutely needed, using
List.getLast().

Change-Id: Iea55ff298533741c5122d4c1757bbee2061fae03
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>